# poetry-todo-app

./: pyproject.toml
app/: crud.py  db.py  main.py  settings.py  todo.py
tests/: test_crud.py
