[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["msakrambutt <msakrambutt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlmodel = "^0.0.16"
streamlit = "^1.32.2"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
pytest = "^8.1.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
